samples/_failures_safe/1761076351_772eed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8864c26.c: In function ‘main’:
./samples/SAFE/__tmp_d8864c26.c:135:12: error: missing terminating " character
  135 |     printf("0:
      |            ^~~
./samples/SAFE/__tmp_d8864c26.c:135:5: error: expected expression at end of input
  135 |     printf("0:
      |     ^~~~~~
./samples/SAFE/__tmp_d8864c26.c:135:5: error: expected declaration or statement at end of input
